# clan-memory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_web.sh  mark  ui.html
.agent/workflows/: code-style.md
resources/i18n/: clan-memory_de.ts  clan-memory_fr.ts  clan-memory_zh.ts
scripts/: clan_data.csv  init_db.py
src/app/: CMakeLists.txt  js_bridge.cpp  js_bridge.h  main.cpp  mainwindow.cpp  mainwindow.h
src/core/: CMakeLists.txt
src/core/config/: config_manager.cc  config_manager.h
src/core/crash/: crashpad_handler.cc  crashpad_handler.h
src/core/db/: database_manager.cc  database_manager.h
src/core/log/: log.cc  log.h
src/core/network/: network_manager.cc  network_manager.h
src/core/platform/: path_manager.cc  path_manager.h
src/core/resource/: resource_manager.cc  resource_manager.h
src/core/task/: task_manager.cc  task_manager.h
src/qml/: CMakeLists.txt
src/shared/: Constants.h  version.h.in
tests/: tst_core_managers_gtest.cc
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: ClanTree.tsx
web/src/components/Admin/: DeleteMemberDialog.css  DeleteMemberDialog.tsx  MemberForm.css  MemberForm.tsx  OperationLogs.css  OperationLogs.tsx
web/src/components/ClanTree/: ClanTree.tsx
web/src/components/Layout/: SidePanel.tsx  TopBar.tsx
web/src/components/Media/: MediaPlayer.css  MediaPlayer.tsx
web/src/hooks/: useClanBridge.ts  useMedia.ts
web/src/pages/: MemberDetail.tsx
web/src/types/: index.ts
